# modules/vectorchain/__init__.py
import asyncio
import logging
from datetime import datetime
from typing import Dict, Any, Optional

from ..crypto_module import KeyManagement, SignatureManagement, Blake3Hashing
from ..multiverse import (
    EntanglementManager,
    HolographyManager,
    ProjectionManager
)
from ..transaction_module import TransactionManager
from ..vector_module import QuantumVectorManager, TransactionMatrix
from ..vm_module import QuantumVMManager
from ..zkp.qzkp_optimized import QuantumZKP


class LocalVectorNode:
    """
    LocalVectorNode handles all quantum and vector operations locally,
    interfacing with Go P2P nodes via HTTP/gRPC.
    """

    def __init__(self, config: Dict[str, Any]):
        self.config = config
        self.logger = logging.getLogger(__name__)
        self.node_id = config.get('node_id', 'node-' + Blake3Hashing().hash(str(datetime.now()).encode(), "node")[:8])
        self.logger.info(self.node_id)

        # Initialize core components
        self._init_core_components()

        # Initialize vector and transaction management
        self._init_vector_management()

        # Initialize quantum components
        self._init_quantum_components()

        # State management
        self.is_initialized = False
        self.is_running = False

        # Response queue for Go node
        self.response_queue = asyncio.Queue()

    def _init_core_components(self):
        """Initialize core cryptographic and management components."""
        try:
            self.key_manager = KeyManagement()
            self.signature_manager = SignatureManagement()
            self.hasher = Blake3Hashing()

            self.logger.info("Core components initialized successfully")
        except Exception as e:
            self.logger.error(f"Failed to initialize core components: {e}")
            raise

    def _init_vector_management(self):
        """Initialize vector and transaction management."""
        try:
            self.vector_manager = QuantumVectorManager()
            self.transaction_manager = TransactionManager(
                dimensions=self.config['vector']['dimensions']
            )
            self.transaction_matrix = TransactionMatrix(
                ["Time"],
                ["Create", "Update", "Delete"]
            )

            self.logger.info("Vector management initialized successfully")
        except Exception as e:
            self.logger.error(f"Failed to initialize vector management: {e}")
            raise

    def _init_quantum_components(self):
        """Initialize quantum-specific components."""
        try:
            self.quantum_vm = QuantumVMManager()
            self.zkp = QuantumZKP()
            self.entanglement_manager = EntanglementManager()
            self.holography_manager = HolographyManager()
            self.projection_manager = ProjectionManager()

            self.logger.info("Quantum components initialized successfully")
        except Exception as e:
            self.logger.error(f"Failed to initialize quantum components: {e}")
            raise

    async def handle_request(self, request_type: str, data: Dict[str, Any]) -> Dict[str, Any]:
        """Handle requests from Go P2P node."""
        try:
            if request_type == "create_vector":
                return await self.create_vector(data['coordinates'], data.get('metadata'))
            elif request_type == "verify_vector":
                return await self.verify_vector(data['vector_id'], data['proof'])
            elif request_type == "generate_proof":
                return await self.generate_proof(data['vector_id'])
            elif request_type == "process_quantum":
                return await self.process_quantum_operation(data['operation'], data['params'])
            else:
                raise ValueError(f"Unknown request type: {request_type}")
        except Exception as e:
            self.logger.error(f"Error handling request {request_type}: {e}")
            return {"error": str(e)}

    async def create_vector(self, coordinates: list, metadata: Optional[Dict] = None) -> Dict[str, Any]:
        """Create a new vector with quantum properties."""
        try:
            # Create vector
            vector = await self.vector_manager.create_vector(coordinates)

            # Generate quantum state
            quantum_state = await self.quantum_vm.prepare_state(coordinates)

            # Generate ZK proof
            proof = self.zkp.prove_vector_knowledge(vector, quantum_state)

            # Calculate entanglement metrics
            entanglement = await self.entanglement_manager.calculate_entanglement(vector)

            # Create response
            response = {
                "vector_id": vector.id,
                "quantum_state": quantum_state.to_dict(),
                "proof": proof,
                "entanglement": entanglement,
                "metadata": metadata or {},
                "timestamp": datetime.utcnow().isoformat()
            }

            return response

        except Exception as e:
            self.logger.error(f"Failed to create vector: {e}")
            raise

    async def verify_vector(self, vector_id: str, proof: Dict[str, Any]) -> Dict[str, Any]:
        """Verify a vector's quantum proof."""
        try:
            vector = await self.vector_manager.get_vector(vector_id)
            if not vector:
                raise ValueError(f"Vector {vector_id} not found")

            # Verify ZK proof
            is_valid = await self.zkp.verify_proof(proof, vector)

            # Verify quantum state
            state_valid = await self.quantum_vm.verify_state(vector)

            # Check entanglement
            entanglement_valid = await self.entanglement_manager.verify_entanglement(vector)

            return {
                "vector_id": vector_id,
                "proof_valid": is_valid,
                "state_valid": state_valid,
                "entanglement_valid": entanglement_valid,
                "timestamp": datetime.utcnow().isoformat()
            }

        except Exception as e:
            self.logger.error(f"Failed to verify vector: {e}")
            raise

    async def generate_proof(self, vector_id: str) -> Dict[str, Any]:
        """Generate a quantum ZK proof for a vector."""
        try:
            vector = await self.vector_manager.get_vector(vector_id)
            if not vector:
                raise ValueError(f"Vector {vector_id} not found")

            # Generate quantum state
            quantum_state = await self.quantum_vm.prepare_state(vector.coordinates)

            # Generate new proof
            proof = self.zkp.prove_vector_knowledge(vector, quantum_state)

            return {
                "vector_id": vector_id,
                "proof": proof,
                "quantum_state": quantum_state.to_dict(),
                "timestamp": datetime.utcnow().isoformat()
            }

        except Exception as e:
            self.logger.error(f"Failed to generate proof: {e}")
            raise

    async def process_quantum_operation(self, operation: str, params: Dict[str, Any]) -> Dict[str, Any]:
        """Process quantum-specific operations."""
        try:
            if operation == "entangle":
                result = await self.entanglement_manager.entangle_vectors(
                    params['vector_ids'],
                    params.get('method', 'default')
                )
            elif operation == "project":
                result = await self.projection_manager.project_vector(
                    params['vector_id'],
                    params['target_dimension']
                )
            elif operation == "holographic_transform":
                result = await self.holography_manager.transform_vector(
                    params['vector_id'],
                    params.get('transformation', 'standard')
                )
            else:
                raise ValueError(f"Unknown quantum operation: {operation}")

            return {
                "operation": operation,
                "result": result,
                "timestamp": datetime.utcnow().isoformat()
            }

        except Exception as e:
            self.logger.error(f"Failed to process quantum operation: {e}")
            raise